Prevent horizontal scrolling and other weird behavior in mobile.

--- a/style.css
+++ b/style.css
@@ -131,6 +131,10 @@ label {
 
 /* MOBILE VERSION */
 @media screen and (max-width: 850px) {
+  body #header {
+    width: 100vw;
+  }
+
   label {
     display: inline-block;
     text-align: right;
